--- a/Stash/Stash/Base.lproj/Main.storyboard
+++ b/Stash/Stash/Base.lproj/Main.storyboard
@@ -14,11 +14,39 @@
         <!--Title-->
         <scene sceneID="5yY-uy-lpP">
             <objects>
-                <viewController id="hHB-95-QRO" sceneMemberID="viewController">
+                <viewController id="hHB-95-QRO" customClass="AchievementsViewController" customModule="Stash" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pKl-Be-Jr2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vWu-vO-QTD">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CWX-xm-vDJ">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9pm-HN-sVP">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vWu-vO-QTD" firstAttribute="top" secondItem="RXP-eD-Ikq" secondAttribute="top" id="OO0-WN-CWS"/>
+                            <constraint firstItem="vWu-vO-QTD" firstAttribute="leading" secondItem="RXP-eD-Ikq" secondAttribute="leading" id="eGp-E8-hMG"/>
+                            <constraint firstItem="vWu-vO-QTD" firstAttribute="bottom" secondItem="RXP-eD-Ikq" secondAttribute="bottom" id="l65-We-UVS"/>
+                            <constraint firstItem="vWu-vO-QTD" firstAttribute="trailing" secondItem="RXP-eD-Ikq" secondAttribute="trailing" id="qAL-rC-Eg8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="RXP-eD-Ikq"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="yAX-0W-F9S">
@@ -26,6 +54,9 @@
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="vWu-vO-QTD" id="I8r-0m-5Mn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tyW-5f-ElS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
